--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
     <div class="clear-container">
       <button class="clear-btn">Clear All</button>
     </div>
+    <div class="cursor"></div>
   </body>
 </html>
